src/main/java/org/example/interfaceSegregastion/example/good/CanFly.java
package org.example.interfaceSegregastion.example.good;

public interface CanFly {

    void fly();

}
